# nushell

./: Cargo.toml
crates/nu-cli/src/: cli.rs  commands.rs  context.rs
crates/nu-cli/src/commands/: alias.rs  from_hdf5.rs  history.rs  run_alias.rs
crates/nu-cli/src/commands/classified/: internal.rs
crates/nu-cli/src/commands/math/: mod.rs  product.rs
crates/nu-cli/src/utils/: data_processing.rs
crates/nu-cli/tests/commands/: alias.rs
crates/nu-command/src/: commands.rs
crates/nu-command/src/commands/: open.rs
crates/nu-parser/src/: parse.rs
crates/nu-protocol/src/: hir.rs  return_value.rs
crates/nu-table/src/: table.rs  wrap.rs
crates/nu_plugin_hdf/: Cargo.toml
crates/nu_plugin_hdf/src/: hdf.rs  lib.rs
crates/nu_plugin_hdf/src/nu/: mod.rs
crates/nu_plugin_hdf5/: Cargo.toml
crates/nu_plugin_hdf5/src/: hdf5.rs  lib.rs
crates/nu_plugin_hdf5/src/nu/: mod.rs
src/plugins/: nu_plugin_extra_hdf.rs  nu_plugin_extra_hdf5.rs
