[package]
authors = ["The Nu Project Contributors"]
description = "An HDF5 plugin for Nushell"
edition = "2018"
license = "MIT"
name = "nu_plugin_hdf"
version = "0.25.2"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-errors = {path = "../nu-errors", version = "0.26.0"}
nu-plugin = {path = "../nu-plugin", version = "0.26.0"}
nu-protocol = {path = "../nu-protocol", version = "0.26.0"}
nu-source = {path = "../nu-source", version = "0.26.0"}

futures = {version = "0.3.5", features = ["compat", "io-compat"]}

# TODO requires hdf5-devel (on openSUSE)
hdf5 = "0.7.0"
hdf5-sys = "0.7.0"
indexmap = {version = "1.6.0", features = ["serde-1"]}
regex = "1.3.9"
serde-pickle = "0.6.2"
