[package]
authors = ["The Nu Project Contributors"]
description = "An HDF5 plugin for Nushell"
edition = "2018"
license = "MIT"
name = "nu_plugin_hdf5"
version = "0.24.2"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
